--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <i class="bi bi-facebook"></i>
     <i class="bi bi-linkedin"></i>
   </section>
-  
+
   <nav>
     <a href="#!">
       <img src="./main.jpg" alt="">
     </a>
-    <i class="bi bi-list"></i>
+    <i class="bi bi-list" id="nav-toggler"></i>
   </nav>
 
   <!-- === MAIN BODY CONTENT === -->
@@ -43,7 +43,7 @@
           Backend Developer
         </p>
         <p class="t-12 mt-1">
-          As a skilled software engineerm, I specialize in building frontend and
+          As a skilled software engineer, I specialize in building frontend and
           backend applications. With a strong commitment to excellence, I
           prioritize speed, accessibility and responsiveness in the applications
           I deliver.
@@ -82,88 +82,88 @@
 
       <!-- === STACK=== -->
       <!--
-                  <div class="stack">
-                    <div class="stack-box">
-                      <i class="bi bi-javascript"></i>
-                      <p>
-                        JavaScript
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-python"></i>
-                      <p>
-                        Python
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-django"></i>
-                      <p>
-                        Django
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-react"></i>
-                      <p>
-                        React
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-vscode"></i>
-                      <p>
-                        Vscode
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-html"></i>
-                      <p>
-                        HTML5
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-css"></i>
-                      <p>
-                        CSS3
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-bootstrap"></i>
-                      <p>
-                        Bootstrap
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-git"></i>
-                      <p>
-                        Git
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-github"></i>
-                      <p>
-                        Github
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-postgres"></i>
-                      <p>
-                        Postgres
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-linux"></i>
-                      <p>
-                        Linux
-                      </p>
-                    </div>
-                    <div class="stack-box">
-                      <i class="bi bi-api"></i>
-                      <p>
-                        Rest API
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                -->
+                        <div class="stack">
+                          <div class="stack-box">
+                            <i class="bi bi-javascript"></i>
+                            <p>
+                              JavaScript
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-python"></i>
+                            <p>
+                              Python
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-django"></i>
+                            <p>
+                              Django
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-react"></i>
+                            <p>
+                              React
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-vscode"></i>
+                            <p>
+                              Vscode
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-html"></i>
+                            <p>
+                              HTML5
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-css"></i>
+                            <p>
+                              CSS3
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-bootstrap"></i>
+                            <p>
+                              Bootstrap
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-git"></i>
+                            <p>
+                              Git
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-github"></i>
+                            <p>
+                              Github
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-postgres"></i>
+                            <p>
+                              Postgres
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-linux"></i>
+                            <p>
+                              Linux
+                            </p>
+                          </div>
+                          <div class="stack-box">
+                            <i class="bi bi-api"></i>
+                            <p>
+                              Rest API
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      -->
 
       <!-- === EXPERIENCE == -->
 
@@ -311,11 +311,20 @@
     </section>
 
     <!-- === RIGHT NAV BAR === -->
-    <section class="right-nav">
+    <section class="right-nav" id="nav-links">
       <a href="#!">About</a>
       <a href="#!">Experience</a>
       <a href="#!">Projects</a>
       <a href="#!">Contact</a>
+
+      <div class="social-links">
+        <i class="bi bi-github"></i>
+        <i class="bi bi-twitter"></i>
+        <i class="bi bi-facebook"></i>
+        <i class="bi bi-linkedin"></i>
+      </div>
     </section>
+
+    <script src="./index.js"></script>
   </body>
 </html>
