--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
             <p class="experience-desc">
               A startup company in Nigeria where I happen to be the lead backend
-              deveoper, building scalable and secured APIs. <br /><br />At
+              developer, building scalable and secured APIs. <br /><br />At
               Brandy, I get to work with other developers to build quality
               software, one that will change the Nigerian fashion industry. I
               get positive feeedbacks from my colleagues and this has helped me
