--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="./style.css" />
-  <title>Gabriel Michael Ojomakpene</title>
+  <title>Portfolio: Gabriel Michael Ojomakpene</title>
 </head>
 <body>
   <!-- === LEFT NAV BAR === -->
   <section class="left-nav">
-    <a href="https://github.com/c">
+    <a href="https://github.com/codewitgabi">
       <i class="bi bi-github"></i>
     </a>
     <a href="https://twitter.com/codewitgabi1">
@@ -42,7 +42,7 @@
       <div>
         <img src="./main.jpg" alt="owner" />
         <p class="big">
-          Hi, I'm
+          Hi, I&apos;m
         </p>
 
         <h1>Gabriel Michael Ojomakpene</h1>
@@ -93,7 +93,7 @@
       <p>
         Driven by a relentless pursuit of excellence, I stay ahead of the
         curve by staying abreast of the latest industry trends and best
-        practices. Whether it's designing APIs, integrating third-party
+        practices. Whether it&apos;s designing APIs, integrating third-party
         services, or developing secure authentication systems, I tackle each
         task with meticulous attention to detail and a knack for
         problem-solving.
@@ -110,7 +110,7 @@
       <p>
         If you are seeking a backend developer who is passionate, skilled, and
         continuously striving for excellence, I would be thrilled to discuss
-        how I can contribute to your organization. Let's embark on a journey
+        how I can contribute to your organization. Let&apos;s embark on a journey
         together, transforming visionary ideas into extraordinary realities.
       </p>
 
@@ -219,7 +219,7 @@
           Brandy, I get to work with other developers to build quality
           software, one that will change the Nigerian fashion industry. I
           get positive feeedbacks from my colleagues and this has helped me
-          grow and build selt confidence.
+          grow and build self confidence.
         </p>
       </div>
     </div>
@@ -274,7 +274,7 @@
           <h4 class="project-name mt-1">Django Email Certify</h4>
           <span class="project-desc mt-1"
             >A django package be used for users email verification on
-            registration. It's an easy to use package with a well documented
+            registration. It&apos;s an easy to use package with a well documented
             documentation. This project is available on Pypi for
             installation. It has been tested and used in most of my recent
             projects that require email verification. A cool feature about
@@ -358,7 +358,7 @@
           <h4 class="project-name mt-1">Plant Shop</h4>
           <span class="project-desc mt-1"
             >A frontend project I used to teach some of my developer friends
-            the concept of web designs with a UI design. It is sort of like
+            the concept of web designs using Figma. It is sort of like
             a landing page for an agricultural company. The goal was to
             create responsive designs and it was achieved. I got to learn a
             lot from this project since it was more about sharing ideas.
@@ -393,7 +393,7 @@
             <span class="cool-text">React.js</span>
             <span class="cool-text">JavaScript</span>
             <span class="cool-text">CSS3</span>
-            <span class="cool-text">Locao Storage</span>
+            <span class="cool-text">Local Storage</span>
           </div>
         </div>
 
@@ -429,15 +429,15 @@
               ><i class="bi bi-github"></i>
             </a>
           </div>
-          <h4 class="project-name mt-1">Gabi's Shop</h4>
+          <h4 class="project-name mt-1">Gabi&apos;s Shop</h4>
           <span class="project-desc mt-1"
-            >Gabi's shop is an ecommerce web application I developed during
+            >Gabi&apos;s shop is an ecommerce web application I developed during
             my early days in backend development. Built on top of many
             technologies, I got to improve my frontend skill and learnt a
             lot from this project. I worked with APIs without knowing what
             they really mean at that stage but looking back, I can see a lot
             of places I can improve the project with the skills I have
-            gained over time and building more complex logic. Gabi's shop
+            gained over time and building more complex logic. Gabi&apos;s shop
             also features payment integration and is my first fullstack
             project.
           </span>
@@ -469,7 +469,7 @@
             technologies. It was really fun to build and took my a lesser
             time to build since I had done the same project with python Kivy
             framework. I took the project to the next level by adding a
-            <q>Play with computer</q> feature. It's not an AI but it was a
+            <q>Play with computer</q> feature. It&apos;s not an AI but it was a
             fun project, separating code logic ans writing DRY codes.
           </span>
           <div class="stack-used mt-1">
@@ -484,6 +484,9 @@
           <div class="flex-sb">
             <a href="https://github.com/codewitgabi/django_url_shortener"
               ><i class="bi bi-github"></i>
+            </a>
+            <a href="https://shurt.vercel.app">
+              <i class="bi bi-arrow-up-right-square"></i>
             </a>
           </div>
           <h4 class="project-name mt-1">URL Shortener</h4>
@@ -532,6 +535,9 @@
           <div class="flex-sb">
             <a href="https://github.com/codewitgabi/django_quiz_app"
               ><i class="bi bi-github"></i>
+            </a>
+            <a href="https://quizc.vercel.app">
+              <i class="bi bi-arrow-up-right-square"></i>
             </a>
           </div>
           <h4 class="project-name mt-1">Quiz App</h4>
@@ -594,7 +600,7 @@
             aimed at allowing users to vote for their choice candidates on
             different categories. Login was by email and I implemented a
             feature where users who have already voted or didn't register at
-            the time of registration won't be allowed to access the voting
+            the time of registration won&apos;t be allowed to access the voting
             page. Relevant errors where displayed to tell the users just
             where they are getting it wrong. This project taught me a lot as
             I even had to build a custom template tag in django and it was
@@ -620,7 +626,7 @@
     <div>
       <h3>Let's Connect !</h3>
       <p>
-        Let's connect and collaborate on your next project for a successful
+        Let&apos;s connect and collaborate on your next project for a successful
         partnership!
       </p>
       <a href="mailto:codewitgabi222@gmail.com" class="hire-me"
@@ -667,6 +673,6 @@
     </div>
   </section>
 
-<script src="./index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
