Switched to software developer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>Gabriel Michael Ojomakpene</h1>
 
         <p class="green t-1">
-          Backend Developer
+          Software Developer
         </p>
         <p class="t-12 mt-1">
           As a skilled software engineer, I specialize in building frontend
